Prevent img from stretching

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -157,6 +157,10 @@ body {
   background-color: var(--cotech-black);
 }
 
+img {
+  object-fit: contain;
+}
+
 img.greyscale {
   filter: grayscale(100);
 }
